@@ -2,6 +2,8 @@ Revision history for Perl extension Sweat
 
 {{$NEXT}}
 
+    - Dropping parentheticals (e.g. birth and death dates, original-language spellings, and IPA pronunciations) from Wikipedia articles' summaries, because they often do not read out loud well.
+
 201909240 2019-09-24T20:55:34Z
 
     - Adding a "language" config option for setting Wikipedia localization.
